[tool.poetry]
name = "arbety-crawler"
version = "0.1.0"
description = ""
authors = ["Herberth Amaral <herberthamaral@gmail.com>"]
readme = "README.md"
packages = [{include = "arbety_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
mitmproxy = "^9.0.1"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
